--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -66,9 +66,9 @@
 
           <!-- Position Column -->
           <ng-container matColumnDef="photoURL">
-            <th mat-header-cell *matHeaderCellDef></th>
+            <th id="thPhoto" mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <img [matMenuTriggerFor]="menu" src="{{element.photoURL}}" onError="this.src='assets/images/userDefault.svg'">
+              <img [matMenuTriggerFor]="menu" src="{{element.photoURL}}" onError="this.src='assets/images/userDefault.svg'" alt="foto de perfil">
               <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="viewProfile(element.uid)">
                   <mat-icon>visibility</mat-icon>
@@ -82,19 +82,19 @@
 
           <!-- Name Column -->
           <ng-container matColumnDef="displayName">
-            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <th id="thName" mat-header-cell *matHeaderCellDef> Nombre </th>
             <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
           </ng-container>
 
           <!-- Weight Column -->
           <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
+            <th id="thEmail" mat-header-cell *matHeaderCellDef> Email </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="symbol" *ngIf="typeUser">
-            <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+            <th id="thDelete" mat-header-cell *matHeaderCellDef> Eliminar </th>
             <td mat-cell *matCellDef="let element">
               <div class="divButtonDelete">
                 <button (click)="reasonDelete(element)" class="buttonDelete" mat-fab color="primary"
@@ -124,13 +124,13 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="tema">
-              <th mat-header-cell *matHeaderCellDef> Tema </th>
+              <th id="thTopic" mat-header-cell *matHeaderCellDef> Tema </th>
               <td mat-cell *matCellDef="let element"> {{element.tema}} </td>
             </ng-container>
   
             <!-- Weight Column -->
             <ng-container matColumnDef="descripcion">
-              <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+              <th id="thDescripcion" mat-header-cell *matHeaderCellDef> Descripcion </th>
               <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
             </ng-container>
   
