Arreglo de diseño de Email: Adaptable al celular

--- a/backend/views/layout/main.hbs
+++ b/backend/views/layout/main.hbs
@@ -19,20 +19,20 @@
 
 .headerEmail{
     width: 100%;
-    height: 80px;
+    height: 90px;
     background-color: #0c0f38;
 }
 .headerEmail .containerTitle{
     padding-top: 25px;
-    display: flex;
-    margin-left: 20%;
+    display: initial;
+    margin-left: 47%;
 }
 .headerEmail .containerTitle h1 {
     color: white;
-    font-size: 30px;
+    font-size: 18px;
     padding-top: 0px;
-    width: 75%;
-    margin-left: 10px;
+    width: 100%;
+    text-align: center;
 }
 .headerEmail .containerTitle img {
     width: 50px;
@@ -44,10 +44,14 @@
     height: 50px;
 }
 
+.sectionMsg {
+    background-color: #191919;
+}
+
 .sectionMsg h2{
     margin-top: 6px;
     margin-left: 5px;
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
     color: red;
 }
@@ -57,18 +61,18 @@
 }
 
 .sectionMsg .messageEmail h1{
-    font-size: 25px;
-    color: #000;
+    font-size: 15px;
+    color: #fff;
 }
 
 .sectionMsg .messageEmail h2{
-    font-size: 21px;
+    font-size: 14px;
     font-style: italic;
     
 }
 .sectionMsg .messageEmail h3{
-    font-size: 20px;
-    color: #000;
+    font-size: 15px;
+    color: #fff;
 }
 
 .contactWeb .centerItem {
@@ -102,10 +106,10 @@
     margin-top: 35px;
 }
 .contactWeb .centerItem .contentText h3{
-    font-size: 20px;
+    font-size: 18px;
     font-style: italic;
     font-family: system-ui;
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid #fff;
 }
 .contactWeb .centerItem .contentText h5 {
     margin-top: 0px;
