Arreglando Routing de la lobby

--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -36,7 +36,7 @@
                   <img src="../../../assets/images/temas.svg" alt="Temas">
                   <p>Temas</p>
                 </button>
-                <button (click)="getListTopics()">
+                <button (click)="goLobbyVR()">
                   <img src="../../../assets/images/virtual-reality.svg" alt="Mundo Virtual">
                   <p>Mundo Virtual</p>
                 </button>
