Inicios de Control de camara modo Escritorio: LOBBY

--- a/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
+++ b/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
@@ -29,3 +29,5 @@
 <img id="backgroundTrophy" src="../../../assets/images/vr/backgroundTrophys.jpg" alt="backgroundTrophy">
 <img id="moreDetails" src="../../../assets/images/vr/nextDetails.svg" alt="moreDetails">
 <img id="imgArrowgo" src="../../../assets/images/vr/arrowUp.svg" alt="Arrowgo">
+<img id="arrowLeft" src="../../../assets/images/vr/left-arrow.svg" alt="arrowLeft">
+<img id="arrowRight" src="../../../assets/images/vr/right-arrow.svg" alt="arrowRight">
