--- a/angularHEFE/src/app/components/vr/lobby/scene/scene.component.html
+++ b/angularHEFE/src/app/components/vr/lobby/scene/scene.component.html
@@ -9,7 +9,9 @@
     <a-entity id="mouseCursor">
       
     </a-entity>
-    
+    <a-image id="arrowLeft" src="#arrowLeft" position="-1.5 0 -1" scale="0.2 0.2 0" opacity="0.4">
+    </a-image>
+    <a-image id="arrowRigth" src="#arrowRight" position="1.5 0 -1" scale="0.2 0.2 0" opacity="0.4"></a-image>
   </a-entity>
 
   <a-entity id="containerPortals" position="0 0 0">
