Control de camara de la lobby

--- a/angularHEFE/src/app/components/chats/messages/messages.component.html
+++ b/angularHEFE/src/app/components/chats/messages/messages.component.html
@@ -39,7 +39,7 @@
   </mat-menu>
 
 
-  <mat-menu #menuRep="matMenu">
+  <mat-menu #menuRep="matMenu" style="z-index: 5002;">
 
     <button mat-menu-item (click)="reportMsg(message.message, message.id, user.email)">
       <mat-icon>report_problem</mat-icon>
