--- a/angularHEFE/src/app/components/chats/chats.component.html
+++ b/angularHEFE/src/app/components/chats/chats.component.html
@@ -12,12 +12,14 @@
         <input type="text" (keyup)="applyFilter($event)" placeholder="Buscar">
       </div>
       <div id="conversation-list">
+        <div *ngIf="rooms.length>0; else Norooms" ></div>
         <div *ngFor="let room of rooms">
 
           <app-conversations [conversation]="room" (chatSelect)="mostrarChat($event)">
           </app-conversations>
 
         </div>
+      </div>
       </div>
       <div id="new-message-container">
         <a>+</a>
@@ -57,6 +59,12 @@
 <ng-template #Principal>
   <div align ="center">
     <img  id="image-principal-chat" src="assets/images/resource1.svg" alt="">
+  </div>
+</ng-template>
+
+<ng-template #Norooms>
+  <div align="center" style="margin-top: 10px; color: white; font-weight: bold;">
+    <h3>No se encontraron chats</h3>
   </div>
 </ng-template>
 
