Creacion de Componentes para el Museo y arreglo de diseño Lobby

--- a/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
+++ b/angularHEFE/src/app/components/vr/lobby/assets/assets.component.html
@@ -16,7 +16,7 @@
 <img id="7" src="../../../assets/images/vr/7.svg" alt="trophy7">
 <img id="8" src="../../../assets/images/vr/8.svg" alt="trophy8">
 <img id="medal" src="../../../assets/images/vr/medal.svg" alt="medal">
-<img id="texturaDetails" src="../../../assets/images/vr/texturDetails.png" alt="textureDetails">
+<img id="texturaDetails" src="../../../assets/images/vr/backgroudDetails.jpg" alt="textureDetails">
 <img id="imgPreview" src="../../../assets/images/vr/imgPreview.jpg" alt="preview">
 <img id="button" src="../../../assets/images/vr/button.png" alt="button">
 <img id="next" src="../../../assets/images/vr/next2.svg" alt="next">
